# locallyai-public

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  DPA_DRAFT.md  DPA_DRAFT_SA.md  ESCROW.md  README.md  SECURITY.md  SLA.md  SUPPORT.md  api.py  audit_reader.py  auth.py  bm25.py  chat.py  chunked_uploads.py  citations.py  client_installers.py  com.locallyai.audit.plist  config.py  conflicts.py  deploy.py  doc_acls.py  documents_compare.py  embed_local.py  fleet.py  inference_gate.py  ingest.py  ingest_queue.py  install.ps1  install.sh  kill_switch.py  llm_models.py  lockout_store.py  manage_users.py  mlx_inference.py  os_supervisor.py  platform_compat.py  pyproject.toml  (+19 more)
.githooks/: pre-commit
.github/workflows/: build-clients.yml  ci.yml
LocallyAI Manager.app/Contents/: Info.plist
LocallyAI Worker.app/Contents/: Info.plist
Stop LocallyAI.app/Contents/: Info.plist
api/: __init__.py  _shared.py  admin.py  chat.py  compliance.py  documents.py  plugins.py
apps/: README.md  serve_ui.py
apps/clients/manager-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/clients/manager-tauri/src-tauri/icons/: icon.icns
apps/clients/manager-tauri/src-tauri/src/: lib.rs  main.rs
apps/fleet-ui/: index.html  package.json  vite.config.ts
apps/manager-desktop/: Info.plist.tmpl  LocallyAIManager.swift  README.md  build.sh
apps/manager-ui/: .env.example  launch.bat  launch.sh
apps/worker-desktop/: Info.plist.tmpl  LocallyAIWorkspace.swift  README.md  build.sh
apps/worker-ui/: .env.example  eslint.config.js  launch.bat  launch.sh  vite.config.ts
audit_export/: audit_export.py
billing/: metering.py
demo/: README.md  run_demo.py
demo/data/: client_engagement_letter.md  conflict_check_procedure.md  gdpr_data_processing_policy.md  nda_template.md  standard_lease_clauses.md
demo/data_sa/: conflict_check_procedure_ksa.md  corporate_restructuring_memo.md  ma_confidentiality_letter.md  nda_difc_style.md  pdpl_data_processing_policy.md  welcome_ar.md
docs/: SOP.md  VENDOR_SOP.md  ha-2node-clients.md  iso27001-controls.md  qdrant-ha.md  release-signing-key.gpg  syncthing-setup.md  windows.md
docs/adr/: 0000-template.md  0001-hybrid-retrieval-rrf-rerank.md  0002-qdrant-as-vector-store.md  0003-hmac-chained-audit-log.md  0004-desktop-clients-swift-and-tauri.md  0005-mac-ha-syncthing-rsync.md  0006-openai-compatible-api-surface.md  0007-bilingual-uk-ksa-regional-defaults.md  0008-multi-backend-inference.md  0009-cloudflare-workers-tiebreaker.md  README.md  (+2 more)
mcp_servers/: __init__.py
monitoring/: monitor.py
scripts/: audit_egress.sh  audit_install.ps1  audit_install.sh  build_sop_pdf.py  build_sop_pdf.sh  build_staff_apps.sh  kill_switch_emergency.sh  kill_switch_totp_qr.sh  kill_switch_totp_setup.sh  onboard_firm.sh  publish_to_github.ps1  publish_to_github.sh  qdrant_cluster_setup.ps1  qdrant_cluster_setup.sh  release_clients.sh  release_kill_switch.sh  release_server.sh  sign_bootstrap.sh  start_locallyai.bat  start_locallyai.sh  stop_locallyai.bat  stop_locallyai.sh  syncthing_setup.ps1  syncthing_setup.sh  totp_secret_helper.sh  verify_compliance_snapshot.py
tests/: ha_chaos.py  smoke_e2e.py  test_chat_tools.py  test_chat_with_plugin.py  test_mcp_servers.py  test_plugins_loader.py  test_smoke.py
watchdog/: README.md  alerting.py  diagnostician.py  heartbeat.py  resurrector.py  sentinel.py
(+171 files in other folders)
